# BLM3722_Software_Engineering

./: .gitmodules  README.md  meson.build  readme.md
02-Laboratory/: readme.md
03-Project/: Course.h  Person.h  Registrar.h  SchoolBranch.h  Student.h  Teacher.h  UML_Diag.md  Worker.h  main.cpp  meson.build
03-Project/00-UseCaseScenario/: Modul_2_Use_Case_Story.xlsx  Modul_3_Use_Case_Story.xlsx  readme.md  use_case_schema.ucase.violet.html
03-Project/01-ClassDiagram/: Student.md  UML_Diag.md
03-Project/02-SequenceDiagram/: Student.md
03-Project/04-GanttDiagram/: gantt.md
03-Project/05-ActivityDiagram/: Student.md
03-Project/Codes/00-UseCaseScenario/: Modul_2_Use_Case_Story.xlsx
03-Project/Module-1/00-UseCaseScenario/: Modul_1_Use_Case_Story.md
03-Project/Module-2/01-ActivityDiagram/: Add_branch_and_classroom.md
03-Project/Module-3/00-UseCaseScenario/: Modul_1_Use_Case_Story.md
03-Project/tests/: meson.build
Project/: UML_Diag.md  use_case_diagram_20_05_2022.seq.violet.html  use_case_schema.ucase.violet.html
Project/Codes/Implementation/: G4_Code_21501027.rar  classroom.py  course.py  create_data.py  helper_functions.py  information_system.py  main.py  person.py  project_cli_app.py  project_prog.sh  registrar.py  schoolBranch.py  school_branch.py  student.py  systemAdmin.py  teacher.py  test_main.py  worker.py
Project/Dump_will_be_deleted_in_future/04-GanttDiagram/: gantt.md
Project/Module-1/00-UseCaseScenario/: Modul_1_Use_Case_Story.xlsx
Project/Module-1/01-SequenceDiagram/: Add_Student.md
(+9 files in other folders)
